trunk/Archive2/32/78f169d6af942f/output
main.cpp: In function 'int main()':
main.cpp:12:6: error: binding 'const A' to reference of type 'A&' discards qualifiers
    b = a;
      ^
main.cpp:3:8: note:   initializing argument 1 of 'A& A::operator=(A&)'
 struct A
        ^
